[gd_scene load_steps=3 format=3 uid="uid://bp0yr4lgytwj3"]

[ext_resource type="Theme" uid="uid://cocwu0u4xq3l7" path="res://Theme2.tres" id="1_4fn62"]
[ext_resource type="Script" path="res://Right/ScriptElement.gd" id="2_h3gim"]

[node name="ScriptElement" type="Panel"]
custom_minimum_size = Vector2(500, 64)
offset_right = 500.0
offset_bottom = 190.0
theme = ExtResource("1_4fn62")
script = ExtResource("2_h3gim")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4fn62")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 42)
layout_mode = 2
alignment = 1
item_count = 18
popup/item_0/text = "🗑️ ⚠Delete⚠ 🗑️"
popup/item_0/id = 0
popup/item_1/text = "↳💭Developer Comment"
popup/item_1/id = 3
popup/item_2/text = ""
popup/item_2/id = 5
popup/item_2/separator = true
popup/item_3/text = "💬💬Talk💬💬"
popup/item_3/id = 100
popup/item_4/text = "💬￬Mutter"
popup/item_4/id = 101
popup/item_5/text = "💬❗Yell"
popup/item_5/id = 102
popup/item_6/text = ""
popup/item_6/id = 9
popup/item_6/separator = true
popup/item_7/text = "▶️💬Talk AutoResume"
popup/item_7/id = 120
popup/item_8/text = "▶️💬￬Mutter AutoResume"
popup/item_8/id = 121
popup/item_9/text = "▶️💬❗Yell AutoResume"
popup/item_9/id = 122
popup/item_10/text = ""
popup/item_10/id = 8
popup/item_10/separator = true
popup/item_11/text = "⏯💬Talk Resume"
popup/item_11/id = 140
popup/item_12/text = "⏯💬￬Mutter Resume"
popup/item_12/id = 141
popup/item_13/text = "⏯💬❗Yell Resume"
popup/item_13/id = 142
popup/item_14/text = ""
popup/item_14/id = 14
popup/item_14/separator = true
popup/item_15/text = "➫Goto Branch"
popup/item_15/id = 200
popup/item_16/text = ""
popup/item_16/id = 16
popup/item_16/separator = true
popup/item_17/text = "⚁2 Choice"
popup/item_17/id = 300

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 31
placeholder_text = "Me? Getting married and having a happy life would be OK, I guess..."
wrap_mode = 1

[node name="Goto" type="OptionButton" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 42)
layout_mode = 2
theme = ExtResource("1_4fn62")
alignment = 1
item_count = 10
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7
popup/item_8/text = "I"
popup/item_8/id = 8
popup/item_9/text = "J"
popup/item_9/id = 9

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="Label" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4fn62")
placeholder_text = "Choice 1"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 9
selected = 1
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7
popup/item_8/text = "I"
popup/item_8/id = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2

[node name="Label" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4fn62")
placeholder_text = "Choice 2"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
item_count = 9
selected = 2
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7
popup/item_8/text = "I"
popup/item_8/id = 8

[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_focus_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
